# serverless-fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  build-lambda.sh  pyproject.toml
app/: main.py
