[tool.poetry]
name = "serverless-fastapi"
version = "0.1.0"
description = ""
authors = ["jvansan <jeffreyavansanten@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = "^0.27.0.post1"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
